src/tests/testfiles/function-calls/parameter-type-2.txt
Error at 6:5: Arguments to function 'f' don't match: char[] vs int
f("c");
  ^
